jcio/templates/namespace.yaml
#@ load("@ytt:overlay", "overlay")
#@ load("_ytt.lib.yaml", "labels")

---
apiVersion: v1
kind: Namespace
metadata:
  name: jcio
  labels: #@ labels("namespace")

#@overlay/match by=overlay.all, expects="1+"
---
#@overlay/match missing_ok=True
metadata:
  #@overlay/match missing_ok=True
  namespace: jcio

#@overlay/match by=overlay.subset({"kind":"Namespace", "metadata":{"name":"jcio"}}), expects=1
---
metadata:
  #@overlay/match missing_ok=True
  labels:
    #@overlay/match missing_ok=True
    namespace.kubernetes.io/name: jcio
    #@overlay/match missing_ok=True
    namespace.kubernetes.io/database-access: enabled
