jcio/templates/service.yaml
#@ load("_ytt.lib.yaml", "labels")

---
apiVersion: v1
kind: Service
metadata:
  name: jcio-frontend
  namespace: jcio
  labels: #@ labels("svc")
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector: #@ labels("jcio-frontend")

---
apiVersion: v1
kind: Service
metadata:
  name: moviedb-frontend
  namespace: jcio
  labels: #@ labels("svc")
spec:
  ports:
  - port: 3007
    targetPort: 3007
  selector: #@ labels("moviedb-frontend")

---
apiVersion: v1
kind: Service
metadata:
  name: moviedb-backend
  namespace: jcio
  labels: #@ labels("svc")
spec:
  ports:
  - port: 4007
    targetPort: 4007
  selector: #@ labels("moviedb-backend")
