jcio/templates/httproute.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
#@ load("_ytt.lib.yaml", "labels")

#@ if len(data.values.configuration.ingress.domains) == 0 or len(data.values.configuration.ingress.domains[0]) == 0 or data.values.configuration.ingress.domains[0] == "example.org":
#@  assert.fail("configuration.ingress.domain is missing or invalid")
#@ end
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jcio-frontend
  namespace: jcio
  labels: #@ labels("httproute")
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: jcio
  hostnames:
  #@ for/end host in data.values.configuration.ingress.domains:
  - #@ host
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: jcio-frontend
      port: 3000
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moviedb
  namespace: jcio
  labels: #@ labels("httproute")
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: moviedb
  hostnames:
  #@ for/end host in data.values.configuration.ingress.domains:
  - #@ "moviedb." + host
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: moviedb-frontend
      port: 3007
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moviedb-frontend
  namespace: jcio
  labels: #@ labels("httproute")
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: moviedb-frontend
  hostnames:
  #@ for/end host in data.values.configuration.ingress.domains:
  - #@ "moviedb-frontend." + host
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: moviedb-frontend
      port: 3007
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moviedb-backend
  namespace: jcio
  labels: #@ labels("httproute")
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway-system
    sectionName: moviedb-backend
  hostnames:
  #@ for/end host in data.values.configuration.ingress.domains:
  - #@ "moviedb-backend." + host
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: moviedb-backend
      port: 4007
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: Strict-Transport-Security
          value: "max-age=31536000; includeSubDomains"
