jcio/templates/ingress.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
#@ load("_ytt.lib.yml", "labels")

#@ if len(data.values.configuration.ingress.domains) == 0 or len(data.values.configuration.ingress.domains[0]) == 0 or data.values.configuration.ingress.domains[0] == "example.org":
#@  assert.fail("configuration.ingress.domain is missing or invalid")
#@ end
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jcio-frontend
  namespace: jcio
  labels: #@ labels("ingress")
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - secretName: jcio-tls
    hosts:
    #@ for host in data.values.configuration.ingress.domains:
    - #@ host
    - #@ "www." + host
    #@ end
  rules:
  #@ for/end host in data.values.configuration.ingress.domains:
  - host: #@ host
    http:
      paths:
      - backend:
          service:
            name: jcio-frontend
            port:
              number: 3000
        path: /
        pathType: Prefix
  #@ for/end host in data.values.configuration.ingress.domains:
  - host: #@ "www." + host
    http:
      paths:
      - backend:
          service:
            name: jcio-frontend
            port:
              number: 3000
        path: /
        pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moviedb
  namespace: jcio
  labels: #@ labels("ingress")
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - secretName: moviedb-tls
    hosts:
    #@ for host in data.values.configuration.ingress.domains:
    - #@ "moviedb." + host
    - #@ "moviedb-frontend." + host
    - #@ "moviedb-backend." + host
    #@ end
  rules:
  #@ for/end host in data.values.configuration.ingress.domains:
  - host: #@ "moviedb." + host
    http:
      paths:
      - backend:
          service:
            name: moviedb-frontend
            port:
              number: 3007
        path: /
        pathType: Prefix
  #@ for/end host in data.values.configuration.ingress.domains:
  - host: #@ "moviedb-frontend." + host
    http:
      paths:
      - backend:
          service:
            name: moviedb-frontend
            port:
              number: 3007
        path: /
        pathType: Prefix
  #@ for/end host in data.values.configuration.ingress.domains:
  - host: #@ "moviedb-backend." + host
    http:
      paths:
      - backend:
          service:
            name: moviedb-backend
            port:
              number: 4007
        path: /
        pathType: Prefix
