jcio/templates/network_policy.yaml
#@ load("@ytt:data", "data")
#@ load("_ytt.lib.yaml", "labels")

#@ if data.values.enable_network_policy:
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jcio-frontend
  namespace: jcio
  labels: #@ labels("netpol")
spec:
  podSelector:
    matchLabels: #@ labels("www-frontend")
  ingress:
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 9090
  - from: #! allow access for gateway-api-controller
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: envoy-gateway-system
      podSelector: {}
    ports:
    - port: 3000

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: moviedb-frontend
  namespace: jcio
  labels: #@ labels("netpol")
spec:
  podSelector:
    matchLabels: #@ labels("moviedb-frontend")
  ingress:
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 3007
  - from: #! allow access for gateway-api-controller
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: envoy-gateway-system
      podSelector: {}
    ports:
    - port: 3007

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: moviedb-backend
  namespace: jcio
  labels: #@ labels("netpol")
spec:
  podSelector:
    matchLabels: #@ labels("moviedb-backend")
  ingress:
  - from: #! allow access for moviedb-frontend
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: jcio
    - podSelector:
        matchLabels: #@ labels("moviedb-frontend")
    ports:
    - port: 4007
  - from: #! allow access for prometheus
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: prometheus
      podSelector: {}
    ports:
    - port: 4007
  - from: #! allow access for gateway-api-controller
    - namespaceSelector:
        matchLabels:
          namespace.kubernetes.io/name: envoy-gateway-system
      podSelector: {}
    ports:
    - port: 4007
#@ end
